--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <h3>About Me</h3>
                         <p>
                             I am an associate professor in the <a href="http://www.cs.ecnu.edu.cn/">School of Computer Science and Technology</a> at <a href="http://english.ecnu.edu.cn/">East China Normal University</a>.
-                            I completed my PhD in the College of Computer Science at Zhejiang University with my advisor Prof. <a href="https://person.zju.edu.cn/en/jkzhu">Jianke Zhu</a>. In 2018, I visited the <a href="https://ucsd.edu">University of California, San Diego</a> and worked with Prof. <a href="https://yip.eng.ucsd.edu/">Michael Yip</a> in ECE department. Also, I had worked as a part-time researcher at <a href="https://azft.alibaba.com/">Alibaba-Zhejiang University Joint Institute of Frontier Technologies</a> during my PhD. Prior to that, I spent some years in video game industries at <a href="https://virtuosgames.com/en">Virtuos</a>.
+                            I completed my PhD in the College of Computer Science at Zhejiang University with my advisor Prof. <a href="https://person.zju.edu.cn/en/jkzhu">Jianke Zhu</a>. In 2018, I visited the <a href="https://ucsd.edu">University of California, San Diego</a> and worked with Prof. <a href="https://yip.eng.ucsd.edu/">Michael Yip</a> in the ECE department. Also, I worked as a part-time researcher at <a href="https://azft.alibaba.com/">Alibaba-Zhejiang University Joint Institute of Frontier Technologies</a> during my PhD. Prior to that, I spent some years in the video game industry at <a href="https://virtuosgames.com/en">Virtuos</a>.
                         </p>
                         <!-- <p>
                 For prospective students, please send me an email with your CV if you are interested in my research work.
@@ -71,8 +71,8 @@
                         <h3>Research Interest</h3>
                         <p>
                             My research interests are in the areas of Computer Vision, Computer Graphics, Robotics and, particularly, in methods of extracting meaningful information and structural data from videos and raw streaming sources.
-                            I am also very interested in finding and defining structural information in video frames to provide visual perception for cross-disciplinary researches, e.g. robotic manipulation.
-                            Currently, my focus is on visual object tracking, 3D reconstruction/fusion/MVS, neural-rendering/diffusion and cloth manipulation works.
+                            I am also very interested in finding and defining structural information in video frames to provide visual perception for cross-disciplinary research, e.g. robotic manipulation.
+                            Currently, my focus is on visual object tracking, 3D reconstruction/fusion/MVS, neural rendering/diffusion and cloth manipulation works.
                             In general, my research area includes:
                         </p>
                         <ul class="mine">
@@ -138,6 +138,19 @@
                         <h3>Selected Publications</h3>
                     </div>
                 </div>
+		<div class="row">
+                    <div class="col-12 col-sm-12 col-xs-12">
+                        <p class="pub">
+                            <b>ChatTracker: Enhancing Visual Tracking Performance via Chatting with Multimodal Large Language Model</b> <br>
+                            Yiming Sun, Fan Yu, Shaoxiang Chen, Yu Zhang, Junwei Huang, Yang Li, Chenhui Li, Changbo Wang<br>
+                            <i>NeurIPS</i>, 2024<br>
+                            [PAPER]
+                            [Project Webpage]
+                        </p>
+                    </div>
+                </div>
+		    
+
 		<div class="row">
                     <div class="col-12 col-sm-12 col-xs-12">
                         <p class="pub">
