Update index.html adding NeurIPS 2024 arxiv

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                             <b>ChatTracker: Enhancing Visual Tracking Performance via Chatting with Multimodal Large Language Model</b> <br>
                             Yiming Sun, Fan Yu, Shaoxiang Chen, Yu Zhang, Junwei Huang, Yang Li, Chenhui Li, Changbo Wang<br>
                             <i>NeurIPS</i>, 2024<br>
-                            [PAPER]
+                            [<a href="https://arxiv.org/abs/2411.01756">PAPER</a>]
                             [Project Webpage]
                         </p>
                     </div>
