--- a/index.html
+++ b/index.html
@@ -141,11 +141,22 @@
 		<div class="row">
                     <div class="col-12 col-sm-12 col-xs-12">
                         <p class="pub">
+                            <b>Motion-Zero: A Zero-Shot Trajectory Control Framework of Moving Object for Diffusion-Based Video Generation</b> <br>
+                            Changgu Chen, Junwei Shu, Gaoqi He, Changbo Wang, Yang Li<br>
+                            <i>AAAI</i>, 2025<br>
+                            [<a href="https://arxiv.org/abs/2401.10150">PAPER</a>]
+                            [Project Webpage]
+                        </p>
+                    </div>
+                </div>
+		<div class="row">
+                    <div class="col-12 col-sm-12 col-xs-12">
+                        <p class="pub">
                             <b>ChatTracker: Enhancing Visual Tracking Performance via Chatting with Multimodal Large Language Model</b> <br>
                             Yiming Sun, Fan Yu, Shaoxiang Chen, Yu Zhang, Junwei Huang, Yang Li, Chenhui Li, Changbo Wang<br>
                             <i>NeurIPS</i>, 2024<br>
                             [<a href="https://arxiv.org/abs/2411.01756">PAPER</a>]
-                            [Project Webpage]
+                            [<a href="https://vpx-ecnu.github.io/ChatTracker_website">Project Webpage</a>]
                         </p>
                     </div>
                 </div>
