--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                             Changgu Chen, Junwei Shu, Gaoqi He, Changbo Wang, Yang Li<br>
                             <i>AAAI</i>, 2025<br>
                             [<a href="https://arxiv.org/abs/2401.10150">PAPER</a>]
-                            [Project Webpage]
+                            [<a href="https://vpx-ecnu.github.io/MotionZero-website">Project Webpage</a>]
                         </p>
                     </div>
                 </div>
