--- a/index.html
+++ b/index.html
@@ -51,13 +51,19 @@
             <main>
                 <div class="row">
                     <div class="col-12 col-sm-12 col-xs-12">
-                        <h3>About Me</h3>
+                        <h3>Bio</h3>
                         <p>
-                            I am an associate professor in the <a href="http://www.cs.ecnu.edu.cn/">School of Computer Science and Technology</a> at <a href="http://english.ecnu.edu.cn/">East China Normal University</a>.
-                            I completed my PhD in the College of Computer Science at Zhejiang University with my advisor Prof. <a href="https://person.zju.edu.cn/en/jkzhu">Jianke Zhu</a>. In 2018, I visited the <a href="https://ucsd.edu">University of California, San Diego</a> and worked with Prof. <a href="https://yip.eng.ucsd.edu/">Michael Yip</a> in the ECE department. Also, I worked as a part-time researcher at <a href="https://azft.alibaba.com/">Alibaba-Zhejiang University Joint Institute of Frontier Technologies</a> during my PhD. Prior to that, I spent some years in the video game industry at <a href="https://virtuosgames.com/en">Virtuos</a>.
+                            Dr. Yang Li is an associate professor at the <a href="http://www.cs.ecnu.edu.cn/">School of Computer Science and Technology</a> in <a href="http://english.ecnu.edu.cn/">East China Normal University</a>.
+                            He is leading the research group, <a href="https://github.com/vpx-ecnu">Visual Perception + X group</a>, focusing on the intersection of computer vision, computer graphics, and robotics areas. 
+                            Dr. Li completed his PhD in the College of Computer Science at Zhejiang University with Prof. <a href="https://person.zju.edu.cn/en/jkzhu">Jianke Zhu</a>. 
+                            In 2018, he visited the <a href="https://ucsd.edu">University of California, San Diego</a> and worked with Prof. <a href="https://yip.eng.ucsd.edu/">Michael Yip</a> in the ECE department. 
+                            Meanwhile, he worked as a part-time researcher at <a href="https://azft.alibaba.com/">Alibaba-Zhejiang University Joint Institute of Frontier Technologies</a> during his PhD. 
+                            Prior to that, he spent some years in the video game industry at <a href="https://virtuosgames.com/en">Virtuos</a>.
                         </p>
                         <!-- <p>
                 For prospective students, please send me an email with your CV if you are interested in my research work.
+                enabling vision-based AI technologies in video analysis, controllable video \& image generation, and non-rigid-object-manipulation in robotics.  
+                I am also very interested in finding and defining structural information in video frames to , e.g. robotic manipulation.
             </p> -->
                     </div>
                 </div>
@@ -68,12 +74,25 @@
                 </div>
                 <div class="row">
                     <div class="col-12 col-sm-12 col-xs-12">
-                        <h3>Research Interest</h3>
+                        <h3>Research Group</h3>
+                        <div class="custom-container container">
+                            <div class="col-4 col-sm-4 col-xs-12"><a href="https://github.com/vpx-ecnu"><img class="portrait img-responsive" src="files/VPX-log.jpg"></a></div>
+                            <div class="desc col-8 col-sm-8 col-xs-12">
+                                <p>
+                                <strong>Visual Perception + X (VPX) group</strong>'s mission is to develop visual perception for cross-disciplinary research, 
+                                particularly, in methods of extracting meaningful information and structural data from videos and raw streaming sources.
+                                Using the vision information further enables AI-based downstream application, including metaverse, AIGC and embodied intelligence. 
+                                Currently, VPX focuses on enabling vision-based AI technologies in video analysis, controllable video \& image generation, and non-rigid-object-manipulation in robotics. 
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-sm-12 col-xs-12">
+                        <h4>Research Areas</h4>
                         <p>
-                            My research interests are in the areas of Computer Vision, Computer Graphics, Robotics and, particularly, in methods of extracting meaningful information and structural data from videos and raw streaming sources.
-                            I am also very interested in finding and defining structural information in video frames to provide visual perception for cross-disciplinary research, e.g. robotic manipulation.
-                            Currently, my focus is on visual object tracking, 3D reconstruction/fusion/MVS, neural rendering/diffusion and cloth manipulation works.
-                            In general, my research area includes:
+                           
                         </p>
                         <ul class="mine">
                             <li><strong>Computer Vision</strong></li>
