--- a/index.html
+++ b/index.html
@@ -160,6 +160,16 @@
 		<div class="row">
                     <div class="col-12 col-sm-12 col-xs-12">
                         <p class="pub">
+                            <b>Open-World Reinforcement Learning over Long Short-Term Imagination</b> <br>
+                            Jiajian Li, Qi Wang, Yunbo Wang, Xin Jin, Yang Li, Wenjun Zeng, Xiaokang Yang<br>
+                            <i>ICRL</i>, 2025<br>
+                        </p>
+                    </div>
+                </div>
+		    
+		<div class="row">
+                    <div class="col-12 col-sm-12 col-xs-12">
+                        <p class="pub">
                             <b>Motion-Zero: A Zero-Shot Trajectory Control Framework of Moving Object for Diffusion-Based Video Generation</b> <br>
                             Changgu Chen, Junwei Shu, Gaoqi He, Changbo Wang, Yang Li<br>
                             <i>AAAI</i>, 2025<br>
