--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                         <p class="pub">
                             <b>Open-World Reinforcement Learning over Long Short-Term Imagination</b> <br>
                             Jiajian Li, Qi Wang, Yunbo Wang, Xin Jin, Yang Li, Wenjun Zeng, Xiaokang Yang<br>
-                            <i>ICRL</i>, 2025<br>
+                            <i>ICLR</i>, 2025<br>
                         </p>
                     </div>
                 </div>
