--- a/index.html
+++ b/index.html
@@ -162,7 +162,9 @@
                         <p class="pub">
                             <b>Open-World Reinforcement Learning over Long Short-Term Imagination</b> <br>
                             Jiajian Li, Qi Wang, Yunbo Wang, Xin Jin, Yang Li, Wenjun Zeng, Xiaokang Yang<br>
-                            <i>ICLR</i>, 2025<br>
+                            <i>ICLR</i>, 2025<be>
+			    [<a href="https://arxiv.org/pdf/2410.03618">PAPER</a>]
+                            [<a href="https://qiwang067.github.io/ls-imagine">Project Webpage</a>]
                         </p>
                     </div>
                 </div>
