--- a/index.html
+++ b/index.html
@@ -160,6 +160,17 @@
 		<div class="row">
                     <div class="col-12 col-sm-12 col-xs-12">
                         <p class="pub">
+                            <b>Warped convolutional neural networks for large homography transformation with psl(3) algebra</b> <br>
+                            Xinrui Zhan, Wenyu Liu, Risheng Yu, Jianke Zhu and Yang Li<br>
+                            <i>Neurocomputing</i>, 2025<br>
+			    [<a href="https://www.sciencedirect.com/science/article/abs/pii/S0925231224020836">PAPER</a>]
+                            [<a href="https://arxiv.org/abs/2206.11657">Early Arxiv Version</a>]
+                        </p>
+                    </div>
+                </div>
+		<div class="row">
+                    <div class="col-12 col-sm-12 col-xs-12">
+                        <p class="pub">
                             <b>Open-World Reinforcement Learning over Long Short-Term Imagination</b> <br>
                             Jiajian Li, Qi Wang, Yunbo Wang, Xin Jin, Yang Li, Wenjun Zeng, Xiaokang Yang<br>
                             <i>ICLR</i>, 2025<br>
