--- a/index.html
+++ b/index.html
@@ -157,6 +157,17 @@
                         <h3>Selected Publications</h3>
                     </div>
                 </div>
+	    	<div class="row">
+                    <div class="col-12 col-sm-12 col-xs-12">
+                        <p class="pub">
+                            <b>ABC-GS: Alignment-Based Controllable Style Transfer for 3D Gaussian Splatting</b> <br>
+                            Wenjie Liu, Zhongliang Liu, Xiaoyan Yang, Man Sha, Yang Li<br>
+                            <i>IEEE International Conference on Multimedia and Expo (ICME)</i>, 2025<br>
+			    [<a href="https://vpx-ecnu.github.io/ABC-GS-website/">PAPER</a>]
+                            [<a href="https://vpx-ecnu.github.io/ABC-GS-website">Project Webpage</a>]
+                        </p>
+                    </div>
+                </div>
 		<div class="row">
                     <div class="col-12 col-sm-12 col-xs-12">
                         <p class="pub">
