--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <meta name="keywords" content="Yang Li">
         <meta name="description" content="Academic homepage of Yang Li">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="google-site-verification" content="dvyf_9e0G44ByEHncIHqkwpHw1jBbOpUTOWwXUsalTU" />
         <title>Yang Li's personal homepage</title>
         <link href="css/main.css" rel="stylesheet">
         <link href="css/bootstrap.min.css" rel="stylesheet">
