--- a/index.html
+++ b/index.html
@@ -158,6 +158,28 @@
                         <h3>Selected Publications</h3>
                     </div>
                 </div>
+		<div class="row">
+                    <div class="col-12 col-sm-12 col-xs-12">
+                        <p class="pub">
+                            <b>TimeSoccer: An End-to-End Multimodal Large Language Model for Soccer Commentary Generation</b> <br>
+                            Ling You1, Wenxuan Huang, Xinni Xie, Xiangyi Wei, Bangyan Li, Yang Li, Shaohui Lin, Changbo Wang<br>
+                            <i>Arxiv</i>, 2025<br>
+			    [<a href="https://arxiv.org/abs/2504.17365">PAPER</a>]
+                            [<a href="https://vpx-ecnu.github.io/TimeSoccer-Website/">Project Webpage</a>]
+                        </p>
+                    </div>
+                </div>
+		<div class="row">
+                    <div class="col-12 col-sm-12 col-xs-12">
+                        <p class="pub">
+                            <b>GT²-GS: Geometry-aware Texture Transfer for Gaussian Splatting</b> <br>
+                            Wenjie Liu, Zhongliang Liu, Junwei Shu, Changbo Wang, Yang Li<br>
+                            <i>Arxiv</i>, 2025<br>
+			    [<a href="https://www.arxiv.org/abs/2505.15208">PAPER</a>]
+                            [<a href="https://vpx-ecnu.github.io/GT2-GS-website/">Project Webpage</a>]
+                        </p>
+                    </div>
+                </div>
 	    	<div class="row">
                     <div class="col-12 col-sm-12 col-xs-12">
                         <p class="pub">
