--- a/index.html
+++ b/index.html
@@ -162,10 +162,10 @@
                     <div class="col-12 col-sm-12 col-xs-12">
                         <p class="pub">
                             <b>TimeSoccer: An End-to-End Multimodal Large Language Model for Soccer Commentary Generation</b> <br>
-                            Ling You1, Wenxuan Huang, Xinni Xie, Xiangyi Wei, Bangyan Li, Yang Li, Shaohui Lin, Changbo Wang<br>
+                            Ling You, Wenxuan Huang, Xinni Xie, Xiangyi Wei, Bangyan Li, Yang Li, Shaohui Lin, Changbo Wang<br>
                             <i>Arxiv</i>, 2025<br>
 			    [<a href="https://arxiv.org/abs/2504.17365">PAPER</a>]
-                            [<a href="https://vpx-ecnu.github.io/TimeSoccer-Website/">Project Webpage</a>]
+<!--                             [<a href="https://vpx-ecnu.github.io/TimeSoccer-Website/">Project Webpage</a>] -->
                         </p>
                     </div>
                 </div>
