--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                             Ling You, Wenxuan Huang, Xinni Xie, Xiangyi Wei, Bangyan Li, Yang Li, Shaohui Lin, Changbo Wang<br>
                             <i>Arxiv</i>, 2025<br>
 			    [<a href="https://arxiv.org/abs/2504.17365">PAPER</a>]
-<!--                             [<a href="https://vpx-ecnu.github.io/TimeSoccer-Website/">Project Webpage</a>] -->
+                            [<a href="https://vpx-ecnu.github.io/TimeSoccer-Website/">Project Webpage</a>]
                         </p>
                     </div>
                 </div>
