--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
                                 <p>
                                 <strong>Visual Perception + X (VPX) group</strong>'s mission is to develop visual perception for cross-disciplinary research, 
                                 particularly, in methods of extracting meaningful information and structural data from videos and raw streaming sources.
-                                Using the vision information further enables AI-based downstream application, including metaverse, AIGC and embodied intelligence. 
-                                Currently, VPX focuses on enabling vision-based AI technologies in video analysis, controllable video \& image generation, and non-rigid-object-manipulation in robotics. 
+                                Using the vision information further enables AI-based downstream applications, including metaverse, AIGC and embodied intelligence. 
+                                Currently, VPX focuses on enabling vision-based AI technologies in video analysis, controllable video/image generation, and non-rigid-object-manipulation in robotics. 
                                 </p>
                             </div>
                         </div>
