--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                         <p class="pub">
                             <b>TimeSoccer: An End-to-End Multimodal Large Language Model for Soccer Commentary Generation</b> <br>
                             Ling You, Wenxuan Huang, Xinni Xie, Xiangyi Wei, Bangyan Li, Yang Li, Shaohui Lin, Changbo Wang<br>
-                            <i>Arxiv</i>, 2025<br>
+                            <i>ACM MM</i>, 2025<br>
 			    [<a href="https://arxiv.org/abs/2504.17365">PAPER</a>]
                             [<a href="https://vpx-ecnu.github.io/TimeSoccer-Website/">Project Webpage</a>]
                         </p>
