--- a/index.html
+++ b/index.html
@@ -135,8 +135,6 @@
                                 <p>With all geometric properties, the next step is to visualize to what human being could understand. To this end, reconstruction and rendering related topics come to our research directions. Based on deep learning, we can bring the real work back onto screen without traditional computer graphics pipeline. We value these topics as next generation tech. for <i>Games</i> and <i>Metaverse</i>.  </p>
                             </div>
                         </div>
-
-
                         <div class="custom-container container">
                             <div class="col-4 col-sm-4 col-xs-12"><img class="portrait img-responsive" src="files/superfull.gif"></div>
                             <div class="desc col-8 col-sm-8 col-xs-12">
@@ -144,8 +142,6 @@
                                 <p>With the capabilities of perceiving visual information in a sequence/video stream, we have succeeded in applying computer vision algorithms to surgical robots to automatically manipulate bio-tissue. In the future, we are planning to continue exploring the possibilities of <i>AGI</i> and <i>Embodied Intelligence</i>-related interdisciplinary projects. </p>
                             </div>
                         </div>
-
-
                     </div>
                 </div>
                 <div class="row">
@@ -158,51 +154,52 @@
                         <h3>Selected Publications</h3>
                     </div>
                 </div>
-		<div class="row">
+
+				<div class="row">
+                    <div class="col-12 col-sm-12 col-xs-12">
+                        <p class="pub">
+                            <b>GT²-GS: Geometry-aware Texture Transfer for Gaussian Splatting</b> <br>
+                            Wenjie Liu, Zhongliang Liu, Junwei Shu, Changbo Wang, Yang Li<br>
+                            <i>AAAI</i>, 2026<br>
+			    			[<a href="https://www.arxiv.org/abs/2505.15208">PAPER</a>]
+                            [<a href="https://vpx-ecnu.github.io/GT2-GS-website/">Project Webpage</a>]
+                        </p>
+                    </div>
+                </div>
+				<div class="row">
                     <div class="col-12 col-sm-12 col-xs-12">
                         <p class="pub">
                             <b>TimeSoccer: An End-to-End Multimodal Large Language Model for Soccer Commentary Generation</b> <br>
                             Ling You, Wenxuan Huang, Xinni Xie, Xiangyi Wei, Bangyan Li, Yang Li, Shaohui Lin, Changbo Wang<br>
                             <i>ACM MM</i>, 2025<br>
-			    [<a href="https://arxiv.org/abs/2504.17365">PAPER</a>]
+			    			[<a href="https://arxiv.org/abs/2504.17365">PAPER</a>]
                             [<a href="https://vpx-ecnu.github.io/TimeSoccer-Website/">Project Webpage</a>]
                         </p>
                     </div>
                 </div>
-		<div class="row">
-                    <div class="col-12 col-sm-12 col-xs-12">
-                        <p class="pub">
-                            <b>GT²-GS: Geometry-aware Texture Transfer for Gaussian Splatting</b> <br>
-                            Wenjie Liu, Zhongliang Liu, Junwei Shu, Changbo Wang, Yang Li<br>
-                            <i>Arxiv</i>, 2025<br>
-			    [<a href="https://www.arxiv.org/abs/2505.15208">PAPER</a>]
-                            [<a href="https://vpx-ecnu.github.io/GT2-GS-website/">Project Webpage</a>]
-                        </p>
-                    </div>
-                </div>
-	    	<div class="row">
+	    		<div class="row">
                     <div class="col-12 col-sm-12 col-xs-12">
                         <p class="pub">
                             <b>ABC-GS: Alignment-Based Controllable Style Transfer for 3D Gaussian Splatting</b> <br>
                             Wenjie Liu, Zhongliang Liu, Xiaoyan Yang, Man Sha, Yang Li<br>
                             <i>IEEE International Conference on Multimedia and Expo (ICME)</i>, 2025<br>
-			    [<a href="https://vpx-ecnu.github.io/ABC-GS-website/">PAPER</a>]
+			    			[<a href="https://vpx-ecnu.github.io/ABC-GS-website/">PAPER</a>]
                             [<a href="https://vpx-ecnu.github.io/ABC-GS-website">Project Webpage</a>]
                         </p>
                     </div>
                 </div>
-		<div class="row">
+				<div class="row">
                     <div class="col-12 col-sm-12 col-xs-12">
                         <p class="pub">
                             <b>Warped convolutional neural networks for large homography transformation with psl(3) algebra</b> <br>
                             Xinrui Zhan, Wenyu Liu, Risheng Yu, Jianke Zhu and Yang Li<br>
                             <i>Neurocomputing</i>, 2025<br>
-			    [<a href="https://www.sciencedirect.com/science/article/abs/pii/S0925231224020836">PAPER</a>]
+			    			[<a href="https://www.sciencedirect.com/science/article/abs/pii/S0925231224020836">PAPER</a>]
                             [<a href="https://arxiv.org/abs/2206.11657">Early Arxiv Version</a>]
                         </p>
                     </div>
                 </div>
-		<div class="row">
+				<div class="row">
                     <div class="col-12 col-sm-12 col-xs-12">
                         <p class="pub">
                             <b>Open-World Reinforcement Learning over Long Short-Term Imagination</b> <br>
