--- a/index.html
+++ b/index.html
@@ -154,7 +154,6 @@
                         <h3>Selected Publications</h3>
                     </div>
                 </div>
-
 				<div class="row">
                     <div class="col-12 col-sm-12 col-xs-12">
                         <p class="pub">
@@ -163,6 +162,17 @@
                             <i>AAAI</i>, 2026<br>
 			    			[<a href="https://www.arxiv.org/abs/2505.15208">PAPER</a>]
                             [<a href="https://vpx-ecnu.github.io/GT2-GS-website/">Project Webpage</a>]
+                        </p>
+                    </div>
+                </div>
+				<div class="row">
+                    <div class="col-12 col-sm-12 col-xs-12">
+                        <p class="pub">
+                            <b>Audio-VLA: Adding Contact Audio Perception to Vision-Language-Action Model for Robotic Manipulation</b> <br>
+                            Xiangyi Wei, Haotian Zhang, Xinyi Cao, Siyu Xie, Weifeng Ge, Yang Li, Changbo Wang<br>
+                            <i>Arxiv</i>, 2025<br>
+			    			[PAPER]
+                            [<a href="https://wxone.github.io/AudioVLA/">Project Webpage</a>]
                         </p>
                     </div>
                 </div>
