--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                             <b>Audio-VLA: Adding Contact Audio Perception to Vision-Language-Action Model for Robotic Manipulation</b> <br>
                             Xiangyi Wei, Haotian Zhang, Xinyi Cao, Siyu Xie, Weifeng Ge, Yang Li, Changbo Wang<br>
                             <i>Arxiv</i>, 2025<br>
-			    			[PAPER]
+			    			[<a href="https://arxiv.org/abs/2511.09958">PAPER</a>]
                             [<a href="https://wxone.github.io/AudioVLA/">Project Webpage</a>]
                         </p>
                     </div>
