--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <p>
                         Email: yli AT cs DOT ecnu DOT edu DOT cn
                     </p>
-                   				            <p>[<a href="https://www.semanticscholar.org/author/Y.-Li/50024044">Semantic Scholar</a>][<a href="https://scholar.google.com/citations?user=N1ZDSHYAAAAJ">Google Scholar</a>][<a href="https://faculty.ecnu.edu.cn/_s16/ly2_19214/main.psp">中文</a>][<a href="https://space.bilibili.com/487404760">Bilibili</a>]</p>
+                   				            <p>[<a href="https://www.semanticscholar.org/author/Y.-Li/50024044">Semantic Scholar</a>][<a href="https://scholar.google.com/citations?user=N1ZDSHYAAAAJ">Google Scholar</a>][<a href="https://faculty.ecnu.edu.cn/_s16/ly2_19214/main.psp">中文</a>][<a href="https://space.bilibili.com/487404760">Bilibili</a>][<a href="https://www.xiaohongshu.com/user/profile/63428cc7000000001901f9a4">小红书🍠</a>][<a href="https://www.douyin.com/user/MS4wLjABAAAArshOwEmGu81_0uvYgWzgXK1SV-Pfr1BOF6iPJurFtRY">抖音</a>]</p>
                 </div>
                 <div class="col-4 col-sm-6 col-xs-12">
                     <img class="portrait img-responsive" src="files/photo-new.jpg">
